# ai-master

./: .dockerignore  .env.example  .gitignore  .railway.json  .railwayignore  .vercelignore  AGENTS_ANALYSIS.md  AGENT_PERFORMANCE_TECH_DEBT_REPORT.md  AGENT_RUNTIME_CORE_AUDIT.md  BUSINESS_PLAN.md  CODEBASE_AUDIT_REPORT.md  COORDINATE_ACCURACY_TECH_DEBT.md  DATASET_BUDGET_PLAN.md  DATASET_GUIDE.md  DATASET_REBALANCE_REPORT.md  DESIGN_SYSTEM_ANALYSIS.md  DISCORD_DATASET_GENERATION_BUDGET.md  EXCHANGE_RATE_FORMULA.md  EXPERT_ANALYSIS.md  LICENSE  M_SERIES_LOST_IN_MIDDLE_DESIGN.md  OGENTI_SYSTEM_DESIGN.md  OSEN_TRAINING_GUIDE.md  O_SERIES_TELEPATHY_DESIGN.md  PLATFORM_USAGE_GUIDE.md  PRODUCTION_TRAINING_GUIDE.md  P_SERIES_ANTI_SYCOPHANCY_DESIGN.md  README.md  SAAS_TRANSITION.md  SERIES_VISION.md  S_SERIES_DESIGN.md  TECHNICAL_DEBT_REPORT.md  _check_all.py  _check_domain.py  _check_html.js  _check_imgs.py  _fix_sub.js  _gen_email_images.py  _test_email.py  _test_email2.py  (+61 more)
.git-rewrite/: backup-refs  commit  index  message  parse  raw-refs  revs
_asar_check/: backend-launcher.js  frontend-launcher.js  main.js  runtime-launcher.js
_asar_extract/: backend-launcher.js  main.js  package.json  preload.js
agent-runtime/: Dockerfile  main.py  requirements.txt
asar_temp/: backend-launcher.js  main.js  preload.js
backend/: DATASET_BOT.md  Dockerfile  _check.mjs  delete_demouser.js  entrypoint.sh  fix_rep.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
configs/: a100_scout.json  cpu_benchmark.json  production.json  quick_test.json
data/: eval.jsonl  train.jsonl
(+317 files in other folders)
